[package]
name = "rusty_pilot"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CanvasGradient',
  'Document',
  'Element',
#  'ImageData',
#  'DomRect',
  'HtmlCanvasElement',
  'Window',
  'MouseEvent', 'PointerEvent', 'TouchEvent', 'TouchList', 'Touch', 'KeyboardEvent', 'KeyEvent',
  'OffscreenCanvas', 'OffscreenCanvasRenderingContext2d', 'ImageBitmap', 'CanvasPattern',
]

